deploy/load-balancer.tf
resource "aws_lb" "api" {

  name = "${local.prefix}-main"

  # 2 types
  # application - handle requests at HTTP level
  # network     - handle requests at network level (tcp & udp)
  load_balancer_type = "application"

  subnets = [
    aws_subnet.public_a.id,
    aws_subnet.public_b.id,
  ]

  security_groups = [aws_security_group.lb.id]

  tags = local.common_tags
}


# group of servers that the load balancer can forward
# requests to.
#
# we gonna add all of our ecs tasks that we created in 
# the target group.
resource "aws_lb_target_group" "api" {
  name   = "${local.prefix}-api"
  vpc_id = aws_vpc.main.id

  # we are adding target group by ip addresses
  target_type = "ip"

  # port of our proxy running on ecs task
  port     = 8000
  protocol = "HTTP"

  # a feature from load-balancer, it allows them 
  # to perform regular polls on our application 
  # to ensure its running, status 200.
  #
  # if it's not healthy, it tells ecs to restart 
  # application to make it healthy.
  health_check {
    path = "/admin/login/"
  }
}


# accepts the request to our load balancer
resource "aws_lb_listener" "api" {
  load_balancer_arn = aws_lb.api.arn

  port     = 80
  protocol = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.api.arn
  }
}

resource "aws_security_group" "lb" {
  description = "Allow access to Application Load Balancer"
  name        = "${local.prefix}-lb"
  vpc_id      = aws_vpc.main.id


  # allow all on port 80
  ingress {
    protocol  = "tcp"
    from_port = 80
    to_port   = 80

    cidr_blocks = ["0.0.0.0/0"]
  }

  # the sole access our load balancer has 
  # to our application
  egress {
    protocol  = "tcp"
    from_port = 8000
    to_port   = 8000

    cidr_blocks = ["0.0.0.0/0"]
  }
}
